# OneThing

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/shared/: CompletionBar.tsx  EmptyState.tsx  PriorityBadge.tsx  SmartAddDialog.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
src/components/ui/: card.tsx  checkbox.tsx  dialog.tsx
src/components/views/: DayView.tsx  MonthView.tsx  SettingsView.tsx  WeekView.tsx  YearView.tsx
src/hooks/: use-ai-settings.ts
src/lib/: ai-schedule.ts  database.ts  reminder-scheduler.ts
src/stores/: todo-store.ts  ui-store.ts
src/types/: todo.ts
