[package]
name = "onething"
version = "0.1.0"
description = "A modern desktop todo application"
authors = ["you"]
edition = "2021"

[lib]
name = "onething_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "common-controls-v6"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
